# SceneEditor

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/ECS/: CameraComponent.cpp  CameraComponent.h  Component.h  Entity.h  LightComponent.h  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
src/assets/: Material.h  Mesh.h  Texture.h  Vertex.h
src/utils/: uuid.h
tests/: test_ecs.cpp  test_transforms.cpp
